--- a/package.json
+++ b/package.json
@@ -16,26 +16,27 @@
   "bin": {
     "field": "./dist/index.js"
   },
-  "files": ["src", "dist", "README.md", "LICENSE.md"],
+  "files": [
+    "src",
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ],
   "scripts": {
     "start": "node src/index.js",
     "watch": "npm-watch start",
     "test": "jest -b",
-    "build":
-      "rimraf dist/ && babel ./src --out-dir dist/ --ignore ./node_modules --ignore __tests__ --copy-files",
-    "make:binaries":
-      "rimraf builds/ && pkg -t node6-linux,node6-win,node6-macos -o builds/field-`cat package.json | jq -r '.version'` dist/field.js",
-    "make":
-      "npm run test && npm run fix && npm run build && npm run make:binaries",
-    "fix":
-      "prettier --single-quote --write src/**/*.js src/*.js package.json *.md"
+    "build": "rimraf dist/ && babel ./src --out-dir dist/ --ignore ./node_modules --ignore __tests__ --copy-files",
+    "make:binaries": "rimraf builds/ && pkg -t node6-linux,node6-win,node6-macos -o builds/field-`cat package.json | jq -r '.version'` dist/field.js",
+    "make": "npm run test && npm run fix && npm run build && npm run make:binaries",
+    "fix": "prettier --single-quote --write src/**/*.js src/*.js package.json *.md"
   },
   "dependencies": {
     "colors": "^1.1.2",
     "commander": "^2.13.0",
     "hoxy": "^3.2.2",
     "ini": "^1.3.5",
-    "iota.lib.js": "0.4.7",
+    "iota.lib.js": "^0.4.7",
     "ip": "^1.1.5",
     "node-machine-id": "^1.1.10",
     "request": "^2.83.0"
@@ -51,8 +52,17 @@
     "rimraf": "^2.6.2"
   },
   "jest": {
-    "testMatch": ["**/__tests__/**/*-test.js?(x)"],
-    "roots": ["src"]
+    "testMatch": [
+      "**/__tests__/**/*-test.js?(x)"
+    ],
+    "roots": [
+      "src"
+    ]
   },
-  "keywords": ["blockchain", "IOTA", "tangle", "p2p"]
+  "keywords": [
+    "blockchain",
+    "IOTA",
+    "tangle",
+    "p2p"
+  ]
 }
